src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_Activation_Status_Reports_to_Keep__c</fullName>
        <inlineHelpText>4 - 1 Month 
12 - 1 Year 
18 - 1.5 Years 
24 - 2 Years 
36 - 3 Years</inlineHelpText>
        <label>Number Activation Status Reports to Keep</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Enrolled_Students__c</fullName>
        <label>Deprecated Number of Enrolled Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Quarterly_Summaries_to_Keep__c</fullName>
        <label>Number of Quarterly Summaries to Keep</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OE_Code__c</fullName>
        <label>OE Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OE_Name__c</fullName>
        <formula>OE_Code__c &amp; &quot;(&quot; &amp; Name &amp; &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OE+Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Activation_Rate__c</fullName>
        <formula>IF( Total_Members_Invited__c =0, 0,  Total_Members_Activated__c /  Total_Members_Invited__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Activation Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PEPS_School_Program_Length__c</fullName>
        <description>School program length - data taken from PEPS</description>
        <label>PEPS School Program Length</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Short-Term (300-599 hours)</fullName>
                </value>
                <value>
                    <fullName>Graduate/Professional (&gt;= 300 hours)</fullName>
                </value>
                <value>
                    <fullName>Non-Degree (600-899 hours)</fullName>
                </value>
                <value>
                    <fullName>Non-Degree 1 Year (900-1799 hours)</fullName>
                </value>
                <value>
                    <fullName>Non-Degree 2 Years (1800-2699 hours)</fullName>
                </value>
                <value>
                    <fullName>Associate&apos;s Degree</fullName>
                </value>
                <value>
                    <fullName>Bachelor&apos;s Degree</fullName>
                </value>
                <value>
                    <fullName>First Professional Degree</fullName>
                </value>
                <value>
                    <fullName>Master&apos;s Degree or Doctor&apos;s Degree</fullName>
                </value>
                <value>
                    <fullName>Professional Certification</fullName>
                </value>
                <value>
                    <fullName>Undergraduate (Previous Degree Required)</fullName>
                </value>
                <value>
                    <fullName>Non-Degree 3 Plus Years (&gt;= 2700 hours)</fullName>
                </value>
                <value>
                    <fullName>Two-Year Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PEPS_School_Type__c</fullName>
        <description>School type - data taken from PEPS</description>
        <label>PEPS School Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Foreign</fullName>
                </value>
                <value>
                    <fullName>Foreign For-Profit</fullName>
                </value>
                <value>
                    <fullName>Foreign Private</fullName>
                </value>
                <value>
                    <fullName>Foreign Public</fullName>
                </value>
                <value>
                    <fullName>Private, Nonprofit</fullName>
                </value>
                <value>
                    <fullName>Proprietary</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Passing_Grade__c</fullName>
        <defaultValue>0.75</defaultValue>
        <label>Passing Grade</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Primary_Risk_Lost_Reason__c</fullName>
        <inlineHelpText>Select the most significant reason that puts this account at risk/lost.</inlineHelpText>
        <label>Primary Risk/Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Staff Changes</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>SALT Customer Service Issues</fullName>
                </value>
                <value>
                    <fullName>SALT Outcomes</fullName>
                </value>
                <value>
                    <fullName>SALT Product Issues</fullName>
                </value>
                <value>
                    <fullName>Unresponsive Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_Wins_in_State__c</fullName>
        <label>Prior Wins in State</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_High_Enrollment_School__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A checkmark in this field indicates that this school is a Priority High Enrollment School.</inlineHelpText>
        <label>Priority High Enrollment School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quarterly_Summary_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quarterly Summary Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RAE_Phone__c</fullName>
        <label>RAE Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RAE_s_Email__c</fullName>
        <formula>Regional_Account_Executive__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RAE&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAE_s_Phone__c</fullName>
        <formula>Regional_Account_Executive__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RAE&apos;s Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_Apply_Date__c</fullName>
        <inlineHelpText>Enter the date when it is time to re-apply for the foundation/donation.</inlineHelpText>
        <label>Re-Apply Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Receive_Detailed_Activation_Status_Rpt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receive Detailed Activation Status Rpt?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field contains the name of the Business Development Regional Account Executive for this account.</description>
        <inlineHelpText>This field contains the name of the Business Development Regional Account Executive for this account.</inlineHelpText>
        <label>Regional Account Executive</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reporting_Frequency__c</fullName>
        <label>Reporting Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>6-Months</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This marks the account as reviewed and approved after creation from lead conversion.</description>
        <inlineHelpText>This marks the account as reviewed and approved after creation from lead conversion.</inlineHelpText>
        <label>Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SALT_Contract_Executed__c</fullName>
        <description>The date the SALT contract was executed.</description>
        <inlineHelpText>The date the SALT contract was executed.</inlineHelpText>
        <label>SALT Contract Executed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SALT_Product_Focus__c</fullName>
        <label>SALT Product Focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Product Offerings</fullName>
                </value>
                <value>
                    <fullName>Early SALT Stage Services (ESSS)</fullName>
                </value>
                <value>
                    <fullName>Free Salt Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SALT_Purchase_Driver__c</fullName>
        <description>Should be Picklist including: Comprehehsive Product, ESSS - Financial Literacy
Client Services Administration - Should be updating this field once we have determined that a contract has been signed</description>
        <inlineHelpText>Should be Picklist including: Comprehehsive Product or ESSS - Fin Lit only
Client Services Administration - Should be updating this field once we have determined that a contract has been signed</inlineHelpText>
        <label>SALT Purchase Driver</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comprehensive Product</fullName>
                </value>
                <value>
                    <fullName>Debt Management Outreach</fullName>
                </value>
                <value>
                    <fullName>Financial Literacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SALT_Reporting__c</fullName>
        <description>This multi picklist field replaces the former individual checkboxes for each report. 4/2015</description>
        <label>SALT Reporting</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Membership Activation Report</fullName>
                </value>
                <value>
                    <fullName>EDMS School Portfolio Profile</fullName>
                </value>
                <value>
                    <fullName>EDMS Communications Attempts</fullName>
                </value>
                <value>
                    <fullName>EDMS Communications Results</fullName>
                </value>
                <value>
                    <fullName>My Money 101</fullName>
                </value>
                <value>
                    <fullName>Quarterly SALT Summary Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SALT_Servicer__c</fullName>
        <label>SALT Servicer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SALT_Vanity_URL__c</fullName>
        <label>SALT Vanity URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sales_Model_Prediction__c</fullName>
        <label>Sales Model Prediction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Loss</fullName>
                </value>
                <value>
                    <fullName>Strong Loss</fullName>
                </value>
                <value>
                    <fullName>Win</fullName>
                </value>
                <value>
                    <fullName>Strong Win</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secondary_Risk_Lost_Reason__c</fullName>
        <description>If the rating is = to anything but Stable need to put in a reason why the volume is at risk or lost.</description>
        <label>Secondary Risk/Lost Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Staff Changes</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>SALT Customer Service Issues</fullName>
                </value>
                <value>
                    <fullName>SALT Outcomes</fullName>
                </value>
                <value>
                    <fullName>SALT Product Issues</fullName>
                </value>
                <value>
                    <fullName>Unresponsive Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsor_Name_s__c</fullName>
        <inlineHelpText>This field contains the name(s) of sponsor(s) that represent opportunities at this account.</inlineHelpText>
        <label>Sponsor Name(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A check mark in this field means that there is a potential opportunity for Sponsorship.  Completing this field will trigger an email alert to management and the Sponsorship Development team.</inlineHelpText>
        <label>Sponsorship Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Win_Rate__c</fullName>
        <label>State Win Rate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status_Update__c</fullName>
        <label>Status Update</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Student_Loans_Deferred__c</fullName>
        <inlineHelpText>Total dollar value of Student Loans that are deferred at Credit Union</inlineHelpText>
        <label>Student Loans Deferred</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Student_Loans__c</fullName>
        <inlineHelpText>Total dollar value of Student Loans for Credit Union</inlineHelpText>
        <label>Student Loans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Time_Based_Workflow__c</fullName>
        <label>Time Based Workflow</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Assets__c</fullName>
        <inlineHelpText>Total Assets for the Credit Union</inlineHelpText>
        <label>Total Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_CU_Membership__c</fullName>
        <inlineHelpText>Membership total number for Credit Union channel ONLY.</inlineHelpText>
        <label>Total CU Membership</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Enrollment__c</fullName>
        <label>Total Enrollment</label>
        <summarizedField>Opportunity.Total_in_Enrollment__c</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Enrollment_from_Recent_Oppty__c</fullName>
        <label>Total Enrollment # from Recent Oppty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Members_Activated__c</fullName>
        <description>Summarized value of all the Activated Members from Member Stats.</description>
        <label>Total Members Activated</label>
        <summarizedField>Member_Stats__c.Members_Activated__c</summarizedField>
        <summaryForeignKey>Member_Stats__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Members_Invited__c</fullName>
        <description>Summarized value of all the Invited Members from Member Stats.</description>
        <label>Total Members Invited</label>
        <summarizedField>Member_Stats__c.Members_Invited__c</summarizedField>
        <summaryForeignKey>Member_Stats__c.Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <description>This is the field that tells you what unique identifier the school is requiring</description>
        <inlineHelpText>This is the field that tells you what unique identifier the school is requiring</inlineHelpText>
        <label>Unique ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001EnhaEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Was_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was this account created as a result of a converted lead?</description>
        <inlineHelpText>Was this account created as a result of a converted lead?</inlineHelpText>
        <label>Was Lead?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Authentication__c</fullName>
        <label>Web Authentication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stafford</fullName>
                </value>
                <value>
                    <fullName>PLUS</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_Client_initially_chose_SALT__c</fullName>
        <description>Should be Picklist including: Comprehehsive Product, Debt Management Outreach, MM101 - Financial Literacy
Client Services Administration - Should be updating this field once we have determined that a contract has been signed</description>
        <inlineHelpText>Should be Picklist including: Comprehehsive Product, Debt Management Outreach, MM101 - Financial Literacy
Client Services Administration - Should be updating this field once we have determined that a contract has been signed</inlineHelpText>
        <label>Why Client initially chose SALT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comprehensive Product</fullName>
                </value>
                <value>
                    <fullName>Debt Management Outreach</fullName>
                </value>
                <value>
                    <fullName>MM101 - Financial Literacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Why_at_Risk__c</fullName>
        <description>If the rating is = to anything but Stable need to put in a reason why the volume is at risk or lost.</description>
        <label>At Risk/Lost Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Client Staff Changes</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>SALT Customer Service Issues</fullName>
                </value>
                <value>
                    <fullName>SALT Outcomes</fullName>
                </value>
                <value>
                    <fullName>SALT Product Issues</fullName>
                </value>
                <value>
                    <fullName>Unresponsive Staff</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X2011_CDR__c</fullName>
        <label>2011 CDR</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X2012_CDR__c</fullName>
        <label>2012 CDR</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAccountTradingCurrency__c</fullName>
        <label>Account Trading Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAccountsPayableControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A vendor must refer to a GLA for it to be used in making a posting. This association is inherited from the Accounting Dimension.</description>
        <label>Accounts Payable Control</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounts (Accounts Payable Control Account)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAccountsReceivableControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An appropriate accounts receivable (or trade debtors) general ledger account.</description>
        <label>Accounts Receivable Control</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAAllowDeleteInUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion of Account in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankAccountName__c</fullName>
        <description>The name of the bank account</description>
        <label>Bank Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankAccountNumber__c</fullName>
        <description>The account number</description>
        <label>Bank Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankAccountReference__c</fullName>
        <description>The account reference, sometimes required for electronic transfers</description>
        <label>Bank Account Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankCity__c</fullName>
        <description>The city</description>
        <label>Bank City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankCountry__c</fullName>
        <description>The country</description>
        <label>Bank Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankFax__c</fullName>
        <description>The fax number</description>
        <label>Bank Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankIBANNumber__c</fullName>
        <description>The IBAN number</description>
        <label>Bank IBAN Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankName__c</fullName>
        <description>The name of the bank</description>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankPhone__c</fullName>
        <description>The bank phone number</description>
        <label>Bank Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankSWIFTNumber__c</fullName>
        <description>The SWIFT or similar number</description>
        <label>Bank SWIFT Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankSortCode__c</fullName>
        <description>The sort code / bank identifier</description>
        <label>Bank Sort Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankStateProvince__c</fullName>
        <description>The state / county / province</description>
        <label>Bank State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankStreet__c</fullName>
        <label>Bank Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__CODABankZipPostalCode__c</fullName>
        <description>The postal code</description>
        <label>Bank Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate1__c</fullName>
        <description>The date on which terms will be calculated.</description>
        <label>Base Date 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End of Next Month</fullName>
                </value>
                <value>
                    <fullName>Invoice Date</fullName>
                </value>
                <value>
                    <fullName>Start of Next Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate2__c</fullName>
        <description>The date on which terms will be calculated</description>
        <label>Base Date 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End of Next Month</fullName>
                </value>
                <value>
                    <fullName>Invoice Date</fullName>
                </value>
                <value>
                    <fullName>Start of Next Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODABaseDate3__c</fullName>
        <description>The date on which terms will be calculated</description>
        <label>Base Date 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>End of Next Month</fullName>
                </value>
                <value>
                    <fullName>Invoice Date</fullName>
                </value>
                <value>
                    <fullName>Start of Next Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODABillingAddressIsValid__c</fullName>
        <formula>NOT(ISBLANK(BillingStreet) &amp;&amp;
ISBLANK(BillingCity) &amp;&amp;
ISBLANK(BillingState) &amp;&amp;
ISBLANK(BillingPostalCode) &amp;&amp;
ISBLANK(BillingCountry)) &amp;&amp;
c2g__CODAValidatedBillingStreet__c == BillingStreet &amp;&amp;
c2g__CODAValidatedBillingCity__c == BillingCity &amp;&amp;
c2g__CODAValidatedBillingState__c == BillingState &amp;&amp;
c2g__CODAValidatedBillingPostCode__c == BillingPostalCode &amp;&amp;
c2g__CODAValidatedBillingCountry__c == BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODABillingMethod__c</fullName>
        <description>The billing method</description>
        <label>Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Self-billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODACreditAgency__c</fullName>
        <description>The name of the credit agency</description>
        <label>Credit Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODACreditLimitEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to enable the credit limit</description>
        <label>Credit Limit Enabled</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>